# abraxas

./: .env.sovereign  .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  CONSTITUTION.md  LICENSE.md  PLAN.md  QUICKSTART.md  README.md  RELEASES.md  RESTRUCTURE.md  bootstrap.sh  cspell.json  docker-compose.yml  efmbptqelsaopjc6b6vulpsfheq5vdua.darc  genesis.md  index.html  manifest  package-lock.json  package.json  pyproject.toml  pytest.ini  restore_reservoir.py  setup-abraxas.sh  setup.bat  setup.sh  tsconfig.json
.beads/: metadata.json
.claude/: skills
.venv-1/: pyvenv.cfg
AbraxasOllama/: README.md
agents/: README.md  billing-agent.js  brand-ux-architect.md  briefing-agent.js  constitution-keeper.md  coordinator.js  delivery-agent.js  feedback-agent.js  index.js  outreach-agent.js  project-coordinator.md  research-agent.js  skill-author.md
api/: README.md  main.py  schema.graphql
bootstrap/: abraxas.py  arangodb.py  requirements.txt
config/: sovereign-channels.json
constitution/: constitution-agon.md  constitution-aletheia.md  constitution-all.md  constitution-core.md  constitution-episteme.md  constitution-ethos.md  constitution-honest.md  constitution-index.md  constitution-janus.md  constitution-krisis.md  constitution-mnemosyne.md  constitution-oneironautics.md  constitution-soter.md  constitution-universal.md  constitution.md  genesis.md
dashboard/: generate_report.py  index.html  report.md  report.py  test_data.json
docs/: ABRAXAS_EXAMPLES.md  README.md  SOVEREIGN_CHANNELS.md  architecture.md  composition-patterns.md  dependencies.md  evolution.md  five-model-evaluation.md  gemini_genesis_research.md  getting_started.md  honest-integration.md  index.md  mnemosyne.md  skills.md  visual-design.md  whitepaper.md
frames/: cautious.md  collaborator.md  context-template.md  creative.md  debug-criteria.md  evaluate-argument.md  evaluate-code.md  evaluate-decision.md  evaluate-research.md  evaluate-writing.md  expert.md  learner.md  skeptic.md
infra/api/: graph-implementation-plan.md  pyproject.toml  schema.graphql
infra/api/service/: README.md  index.ts  init-db.ts  package.json  setup-indexes.ts  test-e2e-cycle.ts
infra/api/src/: __init__.py
infra/api/src/api/v1/: health.py
mcp/: .env.example  tsconfig.json
mcp-servers/: run-servers.sh
mcps/: README.md
memory/: epistemic-ledger.json  ledger.py
ollama_mock/: Dockerfile  server.py
plans/: phase-6-plan.md  (+7 more)
(+1016 files in other folders)
